tests/sksl/errors/Ossfuzz44555.glsl
### Compilation failed:

error: 2: unknown identifier 'intts'
switch(intts((qr-0))) {case 0:;
       ^^^^^
error: 2: unknown identifier 'qr'
switch(intts((qr-0))) {case 0:;
              ^^
error: 6: unknown identifier 'c'
;;c ;;/////a/a///ase 6{
  ^
error: 9: expected expression, but found '/='
; ;/=;////6:½;
   ^^
4 errors
